[gd_scene load_steps=45 format=2]

[ext_resource path="res://assets/characters/Adam_idle_16x16.png" type="Texture" id=1]
[ext_resource path="res://assets/characters/Adam_run_16x16.png" type="Texture" id=2]
[ext_resource path="res://characters/CharacterMover.tscn" type="PackedScene" id=3]
[ext_resource path="res://characters/player/Player.gd" type="Script" id=4]
[ext_resource path="res://characters/AnimatedCharacterSprite.gd" type="Script" id=5]
[ext_resource path="res://characters/AimTimer.tscn" type="PackedScene" id=6]
[ext_resource path="res://characters/StunPopup.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/MateSC-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 208, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 224, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 272, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 304, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 336, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 352, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 368, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 112, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 176, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 32 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 32 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "idle_right",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "run_left",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "run_down",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "run_up",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": true,
"name": "run_right",
"speed": 5.0
}, {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "idle_down",
"speed": 5.0
}, {
"frames": [ SubResource( 28 ) ],
"loop": true,
"name": "idle_up",
"speed": 5.0
}, {
"frames": [ SubResource( 29 ) ],
"loop": true,
"name": "idle_left",
"speed": 5.0
} ]

[sub_resource type="Curve" id=31]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.326136 ), -1.14171, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=32]
curve = SubResource( 31 )

[sub_resource type="ParticlesMaterial" id=33]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 70.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 2.73
scale_curve = SubResource( 32 )
color = Color( 0.568627, 0.145098, 0.145098, 1 )

[sub_resource type="Animation" id=34]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("DeathSprite:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -53.3204, -103.927 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("DeathSprite:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -14 ), Vector2( -3, -13 ), Vector2( -6, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BloodParticles2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BloodParticles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=35]
tracks/0/type = "value"
tracks/0/path = NodePath("DeathSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BloodParticles2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BloodParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="DynamicFont" id=36]
size = 32
font_data = ExtResource( 8 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_index = 5
collision_layer = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Graphics" type="Node2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Graphics"]
position = Vector2( 0, -11 )
frames = SubResource( 30 )
animation = "run_up"
speed_scale = 4.0
script = ExtResource( 5 )

[node name="DeathSprite" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( -6, 0 )
rotation = -1.81388
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="BloodParticles2D" type="Particles2D" parent="Graphics"]
visible = false
position = Vector2( 3, -1 )
emitting = false
amount = 32
lifetime = 1.41
speed_scale = 1.48
local_coords = false
process_material = SubResource( 33 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Graphics"]
autoplay = "idle"
anims/death = SubResource( 34 )
anims/idle = SubResource( 35 )

[node name="CharacterMover" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 10.0

[node name="FlashbangCooldownDisplay" parent="." instance=ExtResource( 6 )]
position = Vector2( 15, -8 )
rotation = -1.57079
aim_timer_display_bar_width = 4.0
aim_timer_display_side_ticks_height = 4
side_colors = Color( 0.109804, 0.109804, 0.0745098, 1 )
main_color = Color( 0.486275, 0.592157, 0.913725, 1 )

[node name="StunPopup" parent="." instance=ExtResource( 7 )]
position = Vector2( -11, -26 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="RestartMessage" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.5
margin_top = -20.0
margin_right = 136.5
margin_bottom = 20.0
custom_fonts/font = SubResource( 36 )
text = "Press 'R' to restart"
__meta__ = {
"_edit_use_anchors_": false
}
